# embedded-hal-c

./: .gitignore  .gitmodules  README.md  meson.build  symlink-gitignore.sh  symlink-rm.sh  symlink.sh
.github/workflows/: ci-examples.yml
examples/lp-f28379d/bme280/: .gitignore
examples/lp-f28379d/bme280/src/: meson.build
examples/lp-f28379d/bme280/src/test/: all_tests.cpp
examples/lp-f28379d/bme280/src/test/fakes/: fff_global_fakes.c  fff_global_fakes.h
examples/ti-lp-f28379d/bme280/: .clang-tidy  .gitignore  Makefile  Makefile.adapter  README.md  gcovr.cfg  meson.build  requirements.txt  setup-coverage-reporting.sh
examples/ti-lp-f28379d/bme280/src/: i2c.c  meson.build
examples/ti-lp-f28379d/bme280/src/test/: meson.build
examples/ti-lp-f28379d/bme280/subprojects/: c2000ware-core-sdk.wrap  embedded-hal-c.wrap  fff.wrap
examples/ti/f28379d/bme280/: meson.build
examples/ti/f28379d/bme280/src/test/: meson.build
examples/ti/lp-f28379d/bme280/: .gitignore  Makefile  Makefile.shim  README.md  meson.build
examples/ti/lp-f28379d/bme280/src/: main.c  meson.build
examples/ti/lp-f28379d/bme280/src/test/: meson.build
inc/: delay.h  i2c.h  spi.h
